--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" type="text/css" href="/Assets/CSS/style.css">
 </head>
 <body>
+    <div class="container1">
+        <input type="text" placeholder="Name" class="" required>
+        <input type="text/number" placeholder="Registration Number" class="" required>
+        <button>Take Quiz</button>
+    </div>
+    </P>
     
 </body>
 </html>
