--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" type="text/Javascript" href="../Moringa3/Assets/java/sript.js">
-    <link rel="stylesheet" type="text/css" href="../Moringa3/Assets/CSS/style.css">
+    <link rel="stylesheet" type="text/Javascript" href="/Assets/java/sript.js">
+    <link rel="stylesheet" type="text/css" href="/Assets/CSS/style.css">
 </head>
 <body>
     <div class="container1">
