--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 <body>
     <div class="container1">
-        <input type="text" placeholder="Name" class="" required>
-        <input type="text/number" placeholder="Registration Number" class="" required>
-        <button>Take Quiz</button>
+        <button><a href="Quiz.html">Take Quiz</a></button>
     </div>
     </P>
     
