--- a/Quiz.html
+++ b/Quiz.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZ</title>
     <link rel="stylesheet" href="/Assets/CSS/quiz.css">
+    <script src="/Assets/java/sript.js"></script>
 </head>
 <body>
-    <div id="question">What is the shotform of HTML?</div>
-    <div class="answer">
-        <ul>
-            <li><p class="answer-text"> HTML</p></li>
-            <li><p class="answer-text"> HTML</p</li>
-            <li><p class="answer-text"> HTML</p</li>
-            <li><p class="answer-text"> MTML</p</li>
-        </ul>
-    </div>
-    <script src="/Assets/java/sript.js"></script>
+    <p>
+        1. What is HTML?
+        <input type="radio" name="question1">
+        <input type="radio" name="question1">
+        <input type="radio" name="question1">
+        <input type="radio" name="question1">
+        2. What is css?
+        <input type="radio" name="question2">
+        <input type="radio" name="question2">
+        <input type="radio" name="question2">
+        <input type="radio" name="question2">
+    </p>
     
 </body>
 </html>
