--- a/Quiz.html
+++ b/Quiz.html
@@ -10,16 +10,27 @@
 </head>
 <body>
     <p>
-        1. What is HTML?
-        <input type="radio" name="question1">
-        <input type="radio" name="question1">
-        <input type="radio" name="question1">
-        <input type="radio" name="question1">
+        1. What is HTML?<br>
+        <input type="radio" name="question1"><br>
+        <input type="radio" name="question1"><br>
+        <input type="radio" name="question1"><br>
+        <input type="radio" name="question1"><br>
         2. What is css?
-        <input type="radio" name="question2">
-        <input type="radio" name="question2">
-        <input type="radio" name="question2">
-        <input type="radio" name="question2">
+        <input type="radio" name="question2"><br>
+        <input type="radio" name="question2"><br>
+        <input type="radio" name="question2"><br>
+        <input type="radio" name="question2"><br>
+        3. What is Javascript?
+        <input type="radio" name="question3"><br>
+        <input type="radio" name="question3"><br>
+        <input type="radio" name="question3"><br>
+        <input type="radio" name="question3"><br>
+        4. What is an element?
+        <input type="radio" name="question4"><br>
+        <input type="radio" name="question4"><br>
+        <input type="radio" name="question4"><br>
+        <input type="radio" name="question4"><br>
+
     </p>
     
 </body>
