--- a/Quiz.html
+++ b/Quiz.html
@@ -14,22 +14,24 @@
         <input type="radio" name="question1"><br>
         <input type="radio" name="question1"><br>
         <input type="radio" name="question1"><br>
-        <input type="radio" name="question1"><br>
+        <input type="radio" name="question1" id="correct1"><br>
         2. What is css?
         <input type="radio" name="question2"><br>
         <input type="radio" name="question2"><br>
-        <input type="radio" name="question2"><br>
+        <input type="radio" name="question2" id="correct2"><br>
         <input type="radio" name="question2"><br>
         3. What is Javascript?
-        <input type="radio" name="question3"><br>
+        <input type="radio" name="question3" id="correct3"><br>
         <input type="radio" name="question3"><br>
         <input type="radio" name="question3"><br>
         <input type="radio" name="question3"><br>
         4. What is an element?
         <input type="radio" name="question4"><br>
         <input type="radio" name="question4"><br>
+        <input type="radio" name="question4" id="correct4"><br>
         <input type="radio" name="question4"><br>
-        <input type="radio" name="question4"><br>
+
+        <input type="Submit" name="submit" value="submit" onclick="result()">
 
     </p>
     
