--- a/Quiz.html
+++ b/Quiz.html
@@ -15,17 +15,17 @@
         <input type="radio" name="question1"><br>
         <input type="radio" name="question1"><br>
         <input type="radio" name="question1" id="correct1"><br>
-        2. What is css?><br>
+        2. What is css?<br>
         <input type="radio" name="question2"><br>
         <input type="radio" name="question2"><br>
         <input type="radio" name="question2" id="correct2"><br>
         <input type="radio" name="question2"><br>
-        3. What is Javascript?><br>
+        3. What is Javascript?<br>
         <input type="radio" name="question3" id="correct3"><br>
         <input type="radio" name="question3"><br>
         <input type="radio" name="question3"><br>
         <input type="radio" name="question3"><br>
-        4. What is an element?><br>
+        4. What is an element?<br>
         <input type="radio" name="question4"><br>
         <input type="radio" name="question4"><br>
         <input type="radio" name="question4" id="correct4"><br>
