--- a/Quiz.html
+++ b/Quiz.html
@@ -11,25 +11,26 @@
 <body>
     <p>
         1. What is HTML?<br>
-        <input type="radio" name="question1"><br>
-        <input type="radio" name="question1"><br>
-        <input type="radio" name="question1"><br>
-        <input type="radio" name="question1" id="correct1"><br>
+        <input type="radio" name="question1">Hyper-text make-up Language<br>
+        <input type="radio" name="question1">Hypertext Makeup Language<br>
+        <input type="radio" name="question1">Hyper Market Language<br>
+        <input type="radio" name="question1" id="correct1">Hypertext Markup Language<br>
         2. What is css?<br>
-        <input type="radio" name="question2"><br>
-        <input type="radio" name="question2"><br>
-        <input type="radio" name="question2" id="correct2"><br>
-        <input type="radio" name="question2"><br>
+        <input type="radio" name="question2"> C-section style<br>
+        <input type="radio" name="question2"> Is an example of HTML<br>
+        <input type="radio" name="question2" id="correct2">Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.
+        <br>
+        <input type="radio" name="question2"> I don't know<br>
         3. What is Javascript?<br>
-        <input type="radio" name="question3" id="correct3"><br>
-        <input type="radio" name="question3"><br>
-        <input type="radio" name="question3"><br>
-        <input type="radio" name="question3"><br>
+        <input type="radio" name="question3" id="correct3">JavaScript is the programming language of the Web<br>
+        <input type="radio" name="question3">I don't know<br>
+        <input type="radio" name="question3">It is a type of script in a play<br>
+        <input type="radio" name="question3">The script tha directs a play<br>
         4. What is an element?<br>
-        <input type="radio" name="question4"><br>
-        <input type="radio" name="question4"><br>
-        <input type="radio" name="question4" id="correct4"><br>
-        <input type="radio" name="question4"><br>
+        <input type="radio" name="question4">Is a pure substance consisting of only atoms<br>
+        <input type="radio" name="question4">Is a body of an atom<br>
+        <input type="radio" name="question4" id="correct4">is a component of an HTML document that tells a web browser how to structure and interpret a part of the HTML document.<br>
+        <input type="radio" name="question4"> Is a single bond<br>
 
        <button><input type="Submit" name="submit" value="submit" onclick="result()"></button>
 
