--- a/Quiz.html
+++ b/Quiz.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZ</title>
-    <link rel="stylesheet" href="/Assets/CSS/quiz.css">
-    <script src="/Assets/java/sript.js"></script>
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
+    <script src="./Assets/java/sript.js"></script>
 </head>
 <body>
     <p>
